# Corundum

./: .main.yml  .travis.yml  Cargo.toml  README.md  all.html  crates.js  index.html  macro.log.html  macro.measure!.html  macro.measure.html  macro.pool.html  macro.static_inner!.html  macro.static_inner.html  search-index.js  settings.html  sidebar-items.js  source-files.js  test.sh  trait.PSafe.html  trait.PSend.html  trait.RootObj.html  trait.TxOutSafe.html  trait.VSafe.html
aho_corasick/: all.html  enum.MatchKind.html  index.html  struct.AhoCorasick.html  struct.Error.html  struct.FindOverlappingIter.html  trait.StateID.html
alloc/: constant.O_16GB.html  constant.O_2GB.html  constant.O_512GB.html  constant.O_CNE.html  sidebar-items.js  struct.BuddyAlg.html  struct.Zones.html  trait.MemPool.html
cell/: sidebar-items.js  struct.LogCell.html  struct.PRefCell.html  struct.Ref.html
corundum/: all.html  derive.PClone.html  derive.Root.html  index.html  macro.log.html  macro.may_crash!.html  macro.may_crash.html  macro.measure.html  macro.pool.html  macro.static_inner.html  macro.static_inner_object.html  sidebar-items.js  struct.AssertTxInSafe.html  trait.LooseTxInUnsafe.html  trait.PSafe.html  trait.PSend.html  trait.RootObj.html  trait.TxInSafe.html  trait.TxOutSafe.html  trait.VSafe.html
crndm/: macro.pool.html  macro.static_inner.html  macro.static_inner_object!.html  sidebar-items.js  struct.AssertTxInSafe.html  trait.PSafe.html  trait.TxInSafe.html  trait.TxOutSafe.html  trait.VSafe.html
crndm_derive/: Cargo.toml  all.html  derive.PClone.html  derive.Root.html  index.html  sidebar-items.js
crndm_derive/src/: cbindgen.rs  cbinding.rs  lib.rs  pclone.rs  root.rs
default/: trait.RootObj.html  type.Journal.html  type.PMutex.html  type.PNonNull.html  type.PRefMut.html  type.Parc.html  type.Pbox.html  type.VCell.html
dirs/: fn.audio_dir.html  fn.data_dir.html  fn.data_local_dir.html  fn.download_dir.html  fn.executable_dir.html  fn.picture_dir.html  fn.runtime_dir.html  fn.video_dir.html
docs/: settings.html  source-files.js
eval/: README.md  build.sh  dependencies.sh  docker-default.json  results.sh  run.sh  setup.sh  test_alloc.sh  ubuntu-deps.sh
eval/atlas-deltas/runtime/tests/data_structures/: CMakeLists.txt  simplekv.cpp  simplekv.hpp  vector.hpp
eval/atlas/deltas/runtime/: CMakeLists.txt
eval/atlas/deltas/runtime/src/logger/: log_mgr_api.cpp
eval/atlas/deltas/runtime/src/pregion_mgr/: pregion_mgr.cpp
eval/atlas/deltas/runtime/src/recover/: recover.cpp
eval/atlas/deltas/runtime/src/util/: util.cpp
eval/atlas/deltas/runtime/tests/data_structures/: btree.c  btree_map.c  simplekv.cpp  simplekv.hpp  vector.hpp
examples/: alloc.rs  btree.rs  fft.rs  fibo.rs  info.rs  microbench.rs  puor.rs  simplekv.rs  spd.rs  sps.rs
getrandom/: index.html  struct.Error.html
impl_trait_for_tuples/: all.html  attr.impl_for_tuples.html  index.html
lazy_static/: fn.initialize.html  index.html  macro.lazy_static.html  trait.LazyStatic.html
libc/: all.html  constant.ABDAY_2.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_3.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.AF_APPLETALK.html  constant.AF_CCITT.html  constant.AF_COIP.html  constant.AF_IMPLINK.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_ISDN.html  constant.AF_ISO.html  constant.AF_NETBIOS.html  constant.AF_NS.html  constant.AF_OSI.html  constant.AF_ROUTE.html  constant.AF_SNA.html  constant.AF_SYSTEM.html  constant.AF_UNIX.html  constant.AF_UNSPEC.html  constant.AIO_NOTCANCELED.html  constant.AI_ALL.html  constant.AI_MASK.html  constant.AI_NUMERICSERV.html  constant.AI_UNUSABLE.html  constant.AI_V4MAPPED.html  constant.AI_V4MAPPED_CFG.html  constant.ALT_DIGITS.html  constant.AM_STR.html  constant.ARPOP_REPLY.html  constant.ARPOP_REQUEST.html  constant.ATF_COM.html  constant.AT_EACCESS.html  (+1470 more)
ll/: fn.clflush.html  fn.clflush_obj.html  fn.cpu.html  fn.mfence.html  fn.persist.html  fn.persist_obj.html  index.html  sidebar-items.js
marker/: trait.PSafe.html  trait.VSafe.html
memchr/: all.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memrchr.html  fn.memrchr2_iter.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html
memmap/: all.html  index.html  struct.Mmap.html  struct.MmapMut.html  struct.MmapOptions.html
num/: all.html  fn.abs.html  fn.abs_sub.html  fn.cast.html  fn.checked_pow.html  fn.clamp.html  fn.one.html  fn.pow.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  fn.signum.html  fn.zero.html  index.html  struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.Float.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Saturating.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html  type.BigRational.html  type.Rational.html
num_bigint/: all.html  enum.Sign.html  index.html  struct.BigInt.html  struct.BigUint.html  struct.ParseBigIntError.html  struct.TryFromBigIntError.html  trait.ToBigInt.html  trait.ToBigUint.html
num_complex/: all.html  index.html  struct.Complex.html  struct.ParseComplexError.html  type.Complex32.html  type.Complex64.html
num_cpus/: fn.get.html  index.html
num_integer/: all.html  fn.div_floor.html  fn.div_mod_floor.html  fn.lcm.html  fn.multinomial.html  fn.nth_root.html  index.html  struct.ExtendedGcd.html  struct.IterBinomial.html  trait.Average.html  trait.Integer.html  trait.Roots.html
num_iter/: all.html  fn.range.html  fn.range_from.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_from.html  fn.range_step_inclusive.html  index.html  struct.Range.html  struct.RangeFrom.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepFrom.html  (+1 more)
num_rational/: all.html  (+7 more)
(+4400 files in other folders)
