[package]
name = "corundum"
version = "0.2.0"
authors = ["Morteza Hoseinzadeh <mhoseinzadeh@cs.ucsd.edu>", "Steven Swanson <swanson@cs.ucsd.edu>"]
edition = "2018"
license = "MIT"
description = "Persistent Programming Library"
documentation = "https://nvsl.github.io/Corundum/"
repository = "https://github.com/NVSL/Corundum"
readme = "README.md"
keywords = ["pmem", "persistent", "memory", "pmdk"]
categories = ["development-tools", "memory-management", "hardware-support"]

[features]
verbose = []
concurrent_pools = []          
capture_footprint = []
use_clflushopt = []
use_clwb = []
use_msync = []
no_persist = []
access_violation_check = []
cyclic_link_check = []
no_log_rc = []
pin_journals = []
no_flush_alloc = []
display_all_flushes = []
no_flush_updates = []
replace_with_log = []
pthread = []
default = ["pthread"]

[dependencies]
memmap = "0.7.0"
term-painter = "0.3.0"
libc = "0.2.81"
num_cpus = "1.13.0"
lazy_static = "1.4.0"
impl-trait-for-tuples = "0.2.0"
crndm_derive = "0.1.1"

# examples
rand = "0.7.3"
regex = "1.3.9"
num = "0.3.1"
