[package]
name = "corundum"
version = "0.3.1"
authors = ["Morteza Hoseinzadeh <mhoseinzadeh@cs.ucsd.edu>", "Steven Swanson <swanson@cs.ucsd.edu>"]
edition = "2018"
license = "MIT"
description = "Persistent Programming Library"
documentation = "https://nvsl.github.io/Corundum/"
repository = "https://github.com/NVSL/Corundum"
readme = "README.md"
keywords = ["pmem", "persistent", "memory", "pmdk"]
categories = ["development-tools", "memory-management", "hardware-support"]

[features]
verbose = []
footprint = []
access_violation_check = []
cyclic_link_check = []
pin_journals = []
display_all_flushes = []
replace_with_log = []
perf_stat = []
use_clflushopt = []
use_clwb = []
use_ntstore = []
use_msync = []
no_persist = []
no_log_rc = []
no_flush_alloc = []
no_flush_updates = []
no_pthread = []
default = []

[dependencies]
memmap = "0.7.0"
term-painter = "0.3.0"
libc = "0.2.82"
impl-trait-for-tuples = "0.2.0"
crndm_derive = "0.1.1"
num_cpus = "1.13.0"

# examples
rand = "0.7.3"
regex = "1.4.3"
num = "0.3.1"
