[package]
name = "corundum"
version = "0.4.0"
authors = ["Morteza Hoseinzadeh <mhoseinzadeh@cs.ucsd.edu>", "Steven Swanson <swanson@cs.ucsd.edu>"]
edition = "2018"
license = "MIT"
description = "Persistent Programming Library"
documentation = "https://nvsl.github.io/Corundum/"
repository = "https://github.com/NVSL/Corundum"
readme = "README.md"
keywords = ["pmem", "persistent", "memory", "pmdk"]
categories = ["development-tools", "memory-management", "hardware-support"]

[features]
verbose = []
stat_footprint = []
stat_perf = []
stat_log = []
stat_print_flushes = []
check_access_violation = []
check_allocator_cyclic_links = []
check_double_free = []
pin_journals = []
replace_with_log = []
use_clflushopt = []
use_clwb = []
use_ntstore = []
use_msync = []
use_pspd = []
use_vspd = []
no_persist = []
no_log_rc = []
no_flush_alloc = []
no_flush_updates = []
no_dyn_borrow_checking = []
no_pthread = []
cbindings = []
default = ["cbindings"]

[dependencies]
memmap = "0.7.0"
term-painter = "0.3.0"
libc = "0.2.82"
impl-trait-for-tuples = "0.2.0"
crndm_derive = { path="crndm_derive" }
num_cpus = "1.13.0"

# examples
rand = "0.8.4"
regex = "1.5.4"
num = "0.4.0"
