[package]
name = "crndm_derive"
version = "0.1.0"
authors = ["Morteza <mhoseinzadeh@ucsd.edu>"]
edition = "2018"

[lib]
name = "crndm_derive"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
features = ["extra-traits", "full", "visit-mut", "parsing"]
version = "1.0"